# src/mixmeasurebuddy_webapp/api/setup.py
@@ -1,0 +1,12 @@
+from setuptools import setup
+
+setup(
+    name='MixMeasureBuddyAPI',
+    version='1.0.0',
+    packages=[''],
+    url='mixmeasurebuddy.com',
+    license='MIT',
+    author='Marcel Ochsendorf',
+    author_email='info@marcelochsendorf.com',
+    description='A smart low cost cocktail scale '
+)
